<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Blueberry</string>
    <string name="search">Search for devices</string>
    <string name="searching">Searching&#8230;</string>
    <string name="wheelSpeeds">Wheel speeds</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="commandHint">Enter a command</string>
    <string name="send">Send</string>
    <string name="threshold">Threshold</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="circle">Circle</string>
    <string name="pairedDevices">Paired devices</string>
    <string name="availableDevices">Available devices</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="kp">Kp</string>
    <string name="ki">Ki</string>
    <string name="kd">Kd</string>
    <string name="maxSpeed">Maximum speed</string>
    <string name="leftStop">L: 0</string>
    <string name="rightStop">R: 0</string>
    <string name="touchPosition">Touch position</string>
    <string name="LRMode">Sending touch position</string>
    <string name="XYMode">Sending wheel speeds</string>
    <string name="speak">Speak</string>
    <string name="data">Data</string>
    <string name="clients">Clients</string>
    <string name="ip">IP:</string>
    <string name="serverStart">Start server</string>
    <string name="serverStop">Stop server</string>
    <string name="timeDelay">Time delay (milliseconds)</string>
    <string name="play">Play</string>
    <string name="livePreview">Live preview</string>
    <string name="stopPreview">Stop preview</string>
    <string name="keyframes">Keyframes</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="pickFile">Pick a keyframe file</string>
    <string name="info">Info</string>
    <string name="saveSuccess">Keyframes saved to "blueberry remote/keyframes"</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="interpolate">Interpolate</string>
    <string-array name="interpolateOpts">
        <item>Linear</item>
        <item>Accelerate</item>
        <item>Decelerate</item>
        <item>Accelerate, Decelerate</item>
    </string-array>
    <string name="storageFolder">BlueberryRemote</string>
    <string name="savePromptText">File name (file will be overwritten is it exists)</string>
    <string name="keyframesInfo">
        Allows creation of keyframe animations. Sends commands in the format of \"k,time,ch1,ch2,ch3\" and so on, where time and ch values are integers as displayed next to the sliders. Time is milliseconds before next command should be expected.\n\n
        Interpolation method determines how it will transition to the next keyframe. Accelerate starts slowly and accelerates, decelerate starts at speed and slows down, linear stays at a constant speed.\n\n
        Enabling "Play" plays the keyframes in a loop.\n\n
        "Live preview" sends the current keyframe as changes are made. time is set to 0.\n\n
        Commands are sent at 20hz. If the app stutters or the Arduino receives mangled messages, it is probably because the bluetooth module can\'t keep up. Configure it to have a higher baud rate.
    </string>

    <style name="listItem">
        <item name="android:paddingTop">5dp</item>
        <item name="android:paddingBottom">5dp</item>
        <item name="android:paddingLeft">8dp</item>
        <item name="android:paddingRight">8dp</item>
    </style>

    <style name="title">
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">#ffffff</item>
    </style>

    <style name="subtitle">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#888888</item>
    </style>

    <style name="settingsRow">
        <item name="android:paddingTop">8dp</item>
        <item name="android:paddingBottom">8dp</item>
        <item name="android:paddingLeft">8dp</item>
        <item name="android:paddingRight">8dp</item>
    </style>

</resources>